# grounded-cv

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  roadmap.md
.claude/: settings.local.json
.github/workflows/: ci.yml  security.yml
backend/: Dockerfile  README.md  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  main.py
backend/app/agents/: __init__.py  base.py
backend/app/api/: __init__.py
backend/app/models/: __init__.py  achievement.py  base.py  education.py  experience.py  master_resume.py  profile.py  skills.py  validators.py
backend/app/orchestrators/: __init__.py
backend/app/services/: __init__.py
backend/app/utils/: __init__.py  retry.py
backend/tests/: __init__.py  conftest.py
backend/tests/integration/: __init__.py
backend/tests/unit/: __init__.py  test_base_agent.py  test_retry.py
backend/tests/unit/models/: __init__.py  conftest.py  test_achievement.py  test_base.py  test_education.py  test_experience.py  test_master_resume.py  test_profile.py  test_skills.py  test_validators.py
data/: .gitattributes
data/base-resumes/: .gitkeep
data/company-research/: .gitkeep
data/config/: personal_info.example.yaml  preferences.yaml
data/market-research/: .gitkeep
data/master-resume/: .gitkeep
data/master-resume/sources/: .gitkeep
data/tailored/: .gitkeep
data/templates/: cover_letter.tex  resume_ats.tex
docs/: README.md  specification.md
docs/architecture/: agents.md  orchestration.md  sdk-patterns.md
docs/diagrams/: 00.CompanyResearchDiagram.mmd  01.MasterResumediagram.mmd  02.1.BestPracticesResearch.CoverLetter.mmd  02.2.BestPracticesResearch.Resume.mmd  03.TailoringOrchestra.mmd  04.InputPreparation.mmd  05.JDMatchingOrchestra.mmd  06.1.WritingOrchestra.Resume.mmd  06.2.WritingOrchestra.CoverLetter.mmd  07.FactCheckerLoopOrchestra.mmd  09.PruningOrchestra.mmd
docs/reference/: evaluator-patterns.md  legacy-codebase.md
frontend/: .prettierrc  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/layout/: Header.tsx  MainLayout.tsx  Sidebar.tsx
frontend/src/pages/: Dashboard.tsx
